--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -1,5 +1,10 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@inproceedings{meijer2004static,
+  title={Static typing where possible, dynamic typing when needed: The end of the cold war between programming languages},
+  author={Meijer, Erik and Drayton, Peter}
+}
+
 @inproceedings{odersky2005scalable,
   title={Scalable component abstractions},
   author={Odersky, Martin and Zenger, Matthias},
